--- a/template/index.html
+++ b/template/index.html
@@ -36,6 +36,7 @@
                             <td>{{ .Description}}</td>
                             <td>{{ .Price}}</td>
                             <td>{{ .Amount}}</td>
+                            <td><button onclick="onDelete('{{.Id}}')" class="btn btn-danger">Deletar</button></td>
                         </tr>
                        {{ end }}
                     </tbody>
@@ -47,6 +48,13 @@
         </div>
     </div>
 </body>
-
+<script>
+    function onDelete(id) {
+        let resposta = confirm("Tem certeza que deseja deletar esse produto?")
+        if (resposta) {
+            window.location = "/delete?id=" + id
+        }
+    }
+</script>
 </html>
 {{end}}
