--- a/template/index.html
+++ b/template/index.html
@@ -22,6 +22,7 @@
                             <td>{{ .Description}}</td>
                             <td>{{ .Price}}</td>
                             <td>{{ .Amount}}</td>
+                            <td><a href="edit?id={{.Id}}" class="btn btn-info">Editar</a></td>
                             <td><button onclick="onDelete('{{.Id}}')" class="btn btn-danger">Deletar</button></td>
                         </tr>
                        {{ end }}
